--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<div class="inner">
 							<header>
 								<h1>Comunidades e empresas de tecnologia, unidas em uma campanha de arrecadação de briquedos.</h1>
-								<p>Estamos realizando eventos, em todo Brasil, o conteudos está excelentes, uma grande oportunidade para você aprender novas tecnologias, se atualizar, fazer networking e ajudar fazendo sua doação de brinquedo.</p>
+								<p>Estamos realizando eventos, em todo Brasil, os conteudos estão excelentes, uma grande oportunidade para você aprender novas tecnologias, se atualizar, fazer networking e ajudar fazendo sua doação de brinquedo.</p>
 							</header>
 							
 							<h2>Comunidades</h2>
