--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
 								</ul>
 							</section>
 						</div>
+						<div class="inner">
+							<section>
+								<h2>Acompanhe também pelo facebook</h2>
+								<ul class="icons">
+									<li><a href="https://www.facebook.com/natalnerdbrasil/"><span class="label">natalnerdbrasil</span></a></li>
+								</ul>
+							</section>
+						</div>						
 					</footer>
 
 			</div>
