--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							<section>
 								<h2>Acompanhe também pelo facebook</h2>
 								<ul class="icons">
-									<li><a href="https://www.facebook.com/natalnerdbrasil/"><span class="label">natalnerdbrasil</span></a></li>
+									<li><a target="_blank" href="https://www.facebook.com/natalnerdbrasil/"><span class="label">natalnerdbrasil</span></a></li>
 								</ul>
 							</section>
 						</div>						
