--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							
 							<h2>Entregas / Festa de Natal</h2>
 							<section id="entrega">
-								<h1>Em São Paulo, será dia 17/12 a entrega dos presentes, estamos organizando em parceria com a <a target="_blank" href="https://www.meetup.com/pt-BR/CriancaSorriso/">Criança Sorriso</a></h1>
+								<h1>Entrega dos presentes será uma grande festa, dia 17/12 as 14:00! <a target="_blank" href="https://www.meetup.com/pt-BR/CriancaSorriso/events/245841006/">Informações do Evento</a></h1>
 							</section>
 						</div>
 					</div>
