Novo site Natal Nerd 2018

--- a/index.html
+++ b/index.html
@@ -1,93 +1,394 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Natal Nerd 2018</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
-		<!-- Wrapper -->
-			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Natal Nerd 2018</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+	 crossorigin="anonymous">
+	<link href='https://fonts.googleapis.com/css?family=Raleway:900,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="assets/css/style.css" />
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+</head>
 
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="title">Natal Nerd 2018</span>
-								</a>
+<body>
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-
-						</div>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="#index">Home</a></li>
-							<li><a href="#contato">Contato</a></li>
-						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<h1>Comunidades, instituições de ensino e empresas de tecnologia, unidas em uma campanha de arrecadação de brinquedos.</h1>
-								
-								<center><h1><span id="number">120</span>/ 500 arrecadados</h1></center>
-							</header>
-							
-							<h2>Novo site - Em breve</h2>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="contato">
-						<div class="inner">
-							<section>
-								<h2>Entre em contato</h2>
-								<ul class="icons">
-									<li><a href="mailto:natalnerd@natalnerd.org" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-						</div>
-						<div class="inner">
-							<section>
-								<h2>Acompanhe também pelo facebook</h2>
-								<ul class="icons">
-									<li><a target="_blank" href="https://www.facebook.com/natalnerdbrasil/"><span class="label">natalnerdbrasil</span></a></li>
-								</ul>
-							</section>
-						</div>						
-					</footer>
-
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<a class="navbar-brand" href="#index">
+			<img src="./images/cabeca.png" width="30" height="30" alt="logo">
+		</a>
+		<a class="navbar-brand" href="#index">Natal Nerd 2018</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+		 aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav">
+				<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" href="#doacoes">Doações</a>
+				<a class="nav-item nav-link" href="#comunidades">Comunidades</a>
+				<a class="nav-item nav-link" href="#empresas">Patrocinadores/Parceiros</a>
+				<a class="nav-item nav-link" href="#agenda">Agenda/Eventos</a>
+				<a class="nav-item nav-link" href="#entrega">Entregas/Festa de Natal</a>
+				<a class="nav-item nav-link" href="#anteriores">Anos Anteriores</a>
+				<a class="nav-item nav-link" href="#contato">Contato</a>
 			</div>
+			<ul class="nav">
+				<li class="nav-item"><a class="social nav-link" title="Facebook" href="https://www.facebook.com/natalnerdbrasil/"
+					 target="_blank"><i class="fab fa-facebook"></i></a></li>
+				<li class="nav-item"><a class="social nav-link" title="Messenger" href="http://m.me/natalnerdbrasil" target="_blank"><i
+						 class="fab fa-facebook-messenger"></i></a></li>
+				<li class="nav-item"><a class="social nav-link" title="E-Mail" href="mailto:ajudantedopapainoel@natalnerd.org"
+					 target="_blank"><i class="far fa-envelope"></i></a></li>
+			</ul>
+		</div>
+	</nav>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-			<script src="https://inorganik.github.io/countUp.js/countUp.js"></script>
+	<header class="header-paralax">
+		<div class="row">
+			<div class="col-md-3 features-img" style="background-image: url('images/noelNerd.png');"></div>
+			<div class="col-md-6 col-sm-3">
+				<h1 class="">Campanha de arrecadação de brinquedos 2018</h1>
+				<!-- <h3 class="">Comunidades e empresas de tecnologia unidas!</h3> -->
+			</div>
+			<div class="col-md-3 features-img" style="background-image: url('images/presentes.png');"></div>
+		</div>
+	</header>
 
-	</body>
+	<main class="mt-5">
+
+		<section id="doacoes">
+			<div class="container-fuid">
+				<div class="row">
+					<div class="col-md-10 offset-md-1 col-sm-3">
+						<h1 class="text-center p-3">Comunidades e empresas de tecnologia, unidas em uma campanha de arrecadação de
+							brinquedos.</h1>
+						<p class="text-center lead p-3">Estamos realizando eventos em todo Brasil! Os conteúdos estão excelentes! Uma
+							grande
+							oportunidade para você
+							aprender novas tecnologias, se atualizar, fazer networking e de quebra ajudar fazendo sua doação de brinquedo.</p>
+						<h3 class="text-center p-3">Nossa meta é arrecadar 500 brinquedos, as doações serão feitas para orfanatos.</h3>
+						<div class="progress" style="height: 50px;">
+							<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger font-weight-bold" style="width:21.8%; height: 50px;">109/500
+								arrecadados</div>
+						</div>
+					</div>
+				</div>
+				<h1 class="text-center p-4">Para 2018, teremos mais uma forma de contribuir!</h1>
+
+				<div class="card-deck m-0">
+					<div class="card bg-light border-danger shadow">
+						<div class="card-body text-center">
+							<h4 class="mb-4">Pontos de Coleta</h4>
+							<p class="card-text lead mt-4">Leve brinquedos aos pontos de coleta!</p>
+							<p class="card-text lead mt-4 mb-4">Clique abaixo para ver o endereço:</p>
+							<a href="https://goo.gl/maps/qQ6LPRZEgVs" target="_blank" class="btn btn-danger mt-4" role="button">Escola SENAI
+								de Informática</a>
+						</div>
+					</div>
+					<div class="card bg-light border-danger shadow">
+						<div class="card-body text-center">
+							<h4>Novo ponto de Coleta</h4>
+							<p class="card-text text-justify lead mb-0">Seja um Ajudante de Papai Noel e solicite um ponto de arrecadação em
+								seu trabalho
+								ou faculdade!</p>
+							<p class="card-text text-justify lead">Entre em contato conosco nos canais abaixo! Se envolva!</p>
+							<a class="btn btn-danger mt-2" href="http://m.me/natalnerdbrasil">Messenger</i></i></a>
+							<a class="btn btn-danger mt-2" href="mailto:ajudantedopapainoel@natalnerd.org">E-mail</i></a>
+						</div>
+					</div>
+					<div class="card bg-light border-danger shadow">
+						<div class="card-body text-center">
+							<h4>Eventos</h4>
+							<p class="card-text lead mt-4 mb-0">Leve brinquedos para nossos eventos!</p>
+							<p class="card-text lead mt-4">Confira nossa agenda ou submeta seu evento:</p>
+							<a href="#agenda" class="btn btn-danger mt-4" role="button">Agenda</a>
+							<a href="http://bit.ly/SubmetaSeuEvento" target="_blank" class="btn btn-danger mt-4" role="button">Submeta</a>
+						</div>
+					</div>
+					<div class="card bg-light border-danger shadow">
+						<div class="card-body text-center">
+							<h4>Doe através de nossas contas</h4>
+							<p class="card-text text-justify lead mt-4">Você também pode ajudar doando pelo PagSeguro ou fazendo uma
+								Transferência
+								Bancária!</p>
+							<a href="http://bit.ly/DoacaoNatalNerd" target="_blank" class="btn btn-danger mx-auto" role="button">PagSeguro</a>
+							<button type="button" class="btn btn-danger mt-1" data-toggle="modal" data-target="#myModal">Transferência
+								Bancária</button>
+							<div class="modal fade" id="myModal">
+								<div class="modal-dialog modal-dialog-centered">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h4 class="modal-title">Transferência Bancária</h4>
+											<button type="button" class="close" data-dismiss="modal">&times;</button>
+										</div>
+										<div class="modal-body">
+											<p class="lead mb-0"><strong>Faça sua transferência para conta abaixo</strong>:<br>
+												Rogério da Rocha Rodrigues<br>
+												CPF: 010.608.735-59<br>
+												Nu Pagamentos S.A. (260)<br>
+												Agência: 0001 | Conta: 5259934-8<br>
+												Tipo: Conta de Pagamento</p>
+										</div>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<h2 id="comunidades" class="text-center p-5">Comunidades Participantes</h2>
+		<section id="communities" class="communities">
+		</section>
+
+		<h2 id="empresas" class="text-center p-5">Patrocinadores/Parceiros</h2>
+		<div class="container">
+			<div class="row">
+				<div class="card-deck mx-auto">
+					<div class="card shadow">
+						<a href="https://www.facebook.com/azureconference/" target="_blank" class="text-dark lead">
+							<img class="card-img-top" src="images/azure.png" alt="Azure Conference">
+							<div class="card-body text-center">
+								<h4 class="card-title">Azure Conference</h4>
+								<p class="card-text">Patrocinador</p>
+							</div>
+						</a>
+					</div>
+					<div class="card shadow">
+						<a href="https://informatica.sp.senai.br/" target="_blank" class="text-dark lead">
+							<img class="card-img-top" src="images/logo-senai.png" alt="SENAI SP">
+							<div class="card-body text-center">
+								<h4 class="card-title">SENAI SP</h4>
+								<p class="card-text">Parceiro</p>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<h2 id="agenda" class="text-center p-5">Agenda/Eventos</h2>
+		<div class="container">
+			<div class="table-responsive">
+				<table class="table table-hover lead">
+					<thead class="thead-dark">
+						<tr>
+							<th>Evento</th>
+							<th>Comunidade</th>
+							<th>Cidade/UF</th>
+							<th>Data</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.sympla.com.br/natalnerd---curso-avancado-de-c__407096" target="_blank">
+									#NatalNerd - Curso avançado de C#
+								</a>
+							</td>
+							<td>DevelopersBR</td>
+							<td>São Paulo/SP</td>
+							<td>08/12/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.sympla.com.br/um-dia-de-coaching-de-carreira__382159" target="_blank">
+									Um dia de Coaching de Carreira
+								</a>
+							</td>
+							<td>Unidos Somos Mais</td>
+							<td>São Paulo/SP</td>
+							<td>08/12/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/capivara-coders/events/256594906/" target="_blank">
+									Natal Nerd 2018
+								</a>
+							</td>
+							<td>Capivara Coders</td>
+							<td>Curitiba/PR</td>
+							<td>01/12/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/DevelopersBR/events/256472084/" target="_blank">
+									[PORTO FELIZ] Introdução a Cloud Computing + Azure
+								</a>
+							</td>
+							<td>DevelopersBR</td>
+							<td>Porto Feliz/SP</td>
+							<td>01/12/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/meetop/events/256180906/" target="_blank">
+									#4 Mee🔝 Talk's - Edição Javascript - Parceria NodeBR - NatalNerd
+								</a>
+							</td>
+							<td>Meetop</td>
+							<td>São Paulo/SP</td>
+							<td>28/11/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/Lean-Coffee-Campinas/events/246479161/" target="_blank">
+									#NATALNERD 11o Lean Coffee Campinas
+								</a>
+							</td>
+							<td>Lean Coffee Campinas</td>
+							<td>Campinas/SP</td>
+							<td>24/11/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/Nerdzao/events/255089597/" target="_blank">
+									#NATALNERD - NerdZão #75 - SQL Maniacs
+								</a>
+							</td>
+							<td>NerdZão</td>
+							<td>São Paulo/SP</td>
+							<td>21/11/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/CaquiCoders/events/255979985/" target="_blank">
+									[PRESENCIAL] CaquiCoders #25: Workshop - Desbravando o Ágil: Kanban
+								</a>
+							</td>
+							<td>CaquiCoders</td>
+							<td>Mogi das Cruzes/SP</td>
+							<td>17/11/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/Nerdzao/events/256055896/" target="_blank">
+									#NATALNERD JUNDIAI #1: Explorando as Tecnologias
+								</a>
+							</td>
+							<td>NerdZão</td>
+							<td>Jundiaí/SP</td>
+							<td>10/11/2018</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+
+		<h2 id="entrega" class="text-center p-5">Entregas/Festa de Natal</h2>
+		<div class="container">
+			<div class="card-deck">
+				<div class="card bg-light border-danger shadow">
+					<div class="card-body lead">
+						<h4 class="text-center mt-5">Veja as instituições que receberão as doações em São Paulo:</h4>
+						<ul class="ml-5 mt-3">
+							<li>CEI Jardim Guairaca</li>
+							<li>Associação Casa da Criança Nossa Senhora Aparecida</li>
+							<li>Cantinho Mei Mei</li>
+							<li>Clube da Comunidade Parque Fongaro</li>
+						</ul>
+					</div>
+				</div>
+				<div class="card bg-light border-danger shadow">
+					<div class="card-body text-center lead">
+						<h4 class="text-center mt-5">Entrega dos presentes será uma grande festa, dia 17/12 as 14:00!</h4>
+						<a href="#" target="_blank" class="btn btn-danger mt-5" role="button">Mais informações aqui</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<h2 id="anteriores" class="text-center p-5">Anos Anteriores</h2>
+		<h4 class="text-center pb-5">Veja como foi nosso Evento no ano passado!</h4>
+		<div class="container">
+			<div class="col-md-10 offset-md-1 col-sm-3">
+				<div id="demo" class="carousel slide" data-ride="carousel">
+					<ul class="carousel-indicators">
+						<li data-target="#demo" data-slide-to="0" class="active"></li>
+						<li data-target="#demo" data-slide-to="1"></li>
+						<li data-target="#demo" data-slide-to="2"></li>
+						<li data-target="#demo" data-slide-to="3"></li>
+						<li data-target="#demo" data-slide-to="4"></li>
+						<li data-target="#demo" data-slide-to="5"></li>
+						<li data-target="#demo" data-slide-to="6"></li>
+						<li data-target="#demo" data-slide-to="7"></li>
+						<li data-target="#demo" data-slide-to="8"></li>
+						<li data-target="#demo" data-slide-to="9"></li>
+					</ul>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="images/carousel/0.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+						<div class="carousel-item">
+							<img src="images/carousel/1.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+						<div class="carousel-item">
+							<img src="images/carousel/2.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+						<div class="carousel-item">
+							<img src="images/carousel/3.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+						<div class="carousel-item">
+							<img src="images/carousel/4.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+						<div class="carousel-item">
+							<img src="images/carousel/5.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+						<div class="carousel-item">
+							<img src="images/carousel/6.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+						<div class="carousel-item">
+							<img src="images/carousel/7.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+						<div class="carousel-item">
+							<img src="images/carousel/8.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+						<div class="carousel-item">
+							<img src="images/carousel/9.jpg" alt="Fotos Natal Nerd 2017" width="100%" height="500">
+						</div>
+					</div>
+					<a class="carousel-control-prev" href="#demo" data-slide="prev">
+						<span class="carousel-control-prev-icon"></span>
+					</a>
+					<a class="carousel-control-next" href="#demo" data-slide="next">
+						<span class="carousel-control-next-icon"></span>
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<h2 id="contato" class="text-center p-5">Contato</h2>
+		<h4 class="text-center pb-5">Entre em contato conosco por e-mail e visite nosso Facebook!</h4>
+		<ul class="nav justify-content-center">
+			<li class="nav-item"><a class="contato nav-link mb-5" title="Facebook" href="https://www.facebook.com/natalnerdbrasil/"
+				 target="_blank"><i class="fab fa-2x fa-facebook"></i></a></li>
+			<li class="nav-item"><a class="contato nav-link mb-5" title="Messenger" href="http://m.me/natalnerdbrasil" target="_blank"><i
+					 class="fab fa-2x fa-facebook-messenger"></i></a></li>
+			<li class="nav-item"><a class="contato nav-link mb-5" title="E-Mail" href="mailto:ajudantedopapainoel@natalnerd.org"
+				 target="_blank"><i class="far fa-2x fa-envelope"></i></a></li>
+		</ul>
+
+	</main>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	 crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	 crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	 crossorigin="anonymous"></script>
+	<script src="assets/js/scroll.js"></script>
+	<script src="assets/js/communities.js"></script>
+	<script src="assets/js/popCommunities.js"></script>
+
+</body>
+
 </html>
