atualizando eventos e entrega dos presentes

--- a/index.html
+++ b/index.html
@@ -211,6 +211,16 @@
 						</tr>
 						<tr>
 							<td>
+								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/Nerdzao/events/256703442/" target="_blank">
+									#NATALNERD - Nerdzão #80 - Better test than break [BDD and QA]
+								</a>
+							</td>
+							<td>NerdZão</td>
+							<td>São Paulo/SP</td>
+							<td>06/12/2018</td>
+						</tr>
+						<tr>
+							<td>
 								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/capivara-coders/events/256594906/" target="_blank">
 									Natal Nerd 2018
 								</a>
@@ -290,18 +300,19 @@
 				<div class="card bg-light border-danger shadow">
 					<div class="card-body lead">
 						<h4 class="text-center mt-5">Veja as instituições que receberão as doações em São Paulo:</h4>
-						<ul class="ml-5 mt-3">
-							<li>CEI Jardim Guairaca</li>
-							<li>Associação Casa da Criança Nossa Senhora Aparecida</li>
-							<li>Cantinho Mei Mei</li>
-							<li>Clube da Comunidade Parque Fongaro</li>
+						<ul class="ml-5 mt-5">
+							<li class="mb-3">CEI Jardim Guairaca</li>
+							<li class="mb-3">Associação Casa da Criança Nossa Senhora Aparecida</li>
+							<li class="mb-3">Cantinho Mei Mei</li>
+							<li class="mb-3">Clube da Comunidade Parque Fongaro</li>
 						</ul>
 					</div>
 				</div>
 				<div class="card bg-light border-danger shadow">
 					<div class="card-body text-center lead">
-						<h4 class="text-center mt-5">Entrega dos presentes será uma grande festa, dia 17/12 as 14:00!</h4>
-						<a href="#" target="_blank" class="btn btn-danger mt-5" role="button">Mais informações aqui</a>
+						<img class="card-img" src="./images/cardsemtexto.png">
+						<!-- <h4 class="text-justify">Em breve mais informações sobre a entrega dos presentes!<h4> -->
+								<!-- <a href="#" target="_blank" class="btn btn-danger mt-5" role="button">Mais informações aqui</a> -->
 					</div>
 				</div>
 			</div>
