Adicionando eventos, comunidades e parceiros

--- a/index.html
+++ b/index.html
@@ -172,6 +172,15 @@
 							</div>
 						</a>
 					</div>
+					<div class="card shadow">
+						<a href="http://balta.io/" target="_blank" class="text-dark lead">
+							<img class="card-img-top" src="images/baltaio.png" alt="balta.io">
+							<div class="card-body text-center">
+								<h4 class="card-title">balta.io</h4>
+								<p class="card-text">Parceiro</p>
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -189,6 +198,16 @@
 						</tr>
 					</thead>
 					<tbody>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://aibrasil.eti.br/" target="_blank">
+									AIFest 2018
+								</a>
+							</td>
+							<td>AI Brasil</td>
+							<td>São Paulo/SP</td>
+							<td>08/12/2018</td>
+						</tr>
 						<tr>
 							<td>
 								<a class="lead text-dark" href="https://www.sympla.com.br/natalnerd---curso-avancado-de-c__407096" target="_blank">
@@ -211,6 +230,16 @@
 						</tr>
 						<tr>
 							<td>
+								<a class="lead text-dark" href="https://www.sympla.com.br/lideranca-agil__414852" target="_blank">
+									Liderança Agil
+								</a>
+							</td>
+							<td>Annelise Gripp</td>
+							<td>São Paulo/SP</td>
+							<td>07/12/2018</td>
+						</tr>
+						<tr>
+							<td>
 								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/Nerdzao/events/256703442/" target="_blank">
 									#NATALNERD - Nerdzão #80 - Better test than break [BDD and QA]
 								</a>
@@ -218,6 +247,26 @@
 							<td>NerdZão</td>
 							<td>São Paulo/SP</td>
 							<td>06/12/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.sympla.com.br/workshop-beneficente---azure-devops__413778" target="_blank">
+									Workshop Beneficente - Azure DevOps
+								</a>
+							</td>
+							<td>DevOps Professionals</td>
+							<td>São Paulo/SP</td>
+							<td>05/12/2018</td>
+						</tr>
+						<tr>
+							<td>
+								<a class="lead text-dark" href="https://www.meetup.com/pt-BR/GDG-SP/events/256714735/" target="_blank">
+									Android Meetup #64
+								</a>
+							</td>
+							<td>GDG-SP</td>
+							<td>São Paulo/SP</td>
+							<td>04/12/2018</td>
 						</tr>
 						<tr>
 							<td>
