acertando bug da navbar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		<div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
 				<a class="nav-item nav-link scrollSuave" href="#doacoes">Doações</a>
 				<a class="nav-item nav-link scrollSuave" href="#comunidades">Comunidades</a>
